--- a/package.json
+++ b/package.json
@@ -12,5 +12,6 @@
         "@keystone-6/core": "^6.0.0",
         "@keystone-6/fields-document": "^9.0.0",
         "typescript": "^5.5.0"
-    }
+    },
+    "packageManager": "yarn@4.5.1"
 }
