force graphql resolution

--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
         "@keystone-6/fields-document": "^9.0.0",
         "typescript": "^5.5.0"
     },
+    "resolutions": {
+        "graphql": "16.9.0"
+    },
     "packageManager": "yarn@4.5.1"
 }
