--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,4 +15,6 @@ jobs:
       - run: yarn why -R graphql
       - run: yarn info -R graphql
       - run: yarn build
+        env:
+          NODE_ENV: production
 
